# crew_architect

crew_architect/: README.md  pyproject.toml
crew_architect/output/: generated_crew_files.md
crew_architect/src/crew_architect/: crew.py  main.py
crew_architect/src/crew_architect/config/: agents.yaml  tasks.yaml
