[project]
name = "crew_architect"
version = "0.1.0"
description = "crew_architect using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
crew_architect = "crew_architect.main:run"
run_crew = "crew_architect.main:run"
train = "crew_architect.main:train"
replay = "crew_architect.main:replay"
test = "crew_architect.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
